<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="other_settings"
        app:summary="@string/other_settings_summary"
        app:title="@string/other_settings" />

    <Preference
        app:key="time_estimates_settings"
        app:summary="@string/time_estimates_settings_summary"
        app:title="@string/time_estimates_settings" />

    <Preference
        app:key="current_state_settings"
        app:summary="@string/current_state_settings_summary"
        app:title="@string/tab_current_info" />

    <Preference
        app:key="notification_settings"
        app:summary="@string/notification_settings_summary"
        app:title="@string/notification_settings" />

    <Preference
        app:key="advanced_settings"
        app:summary="@string/advanced_settings_summary"
        app:title="@string/advanced_settings" />

    <Preference
        app:key="backup_restore_settings"
        app:summary="@string/backup_restore_settings_summary"
        app:title="@string/pref_backup_restore" />

    <Preference
        app:key="diagnostics_settings"
        app:summary="@string/diagnostics_summary"
        app:title="@string/diagnostics" />
</PreferenceScreen>
