<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/named_so_scroll_position_is_preserved"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        style="@style/help_ll"
        android:orientation="vertical">

        <TextView
            style="@style/help_cat"
            android:text="@string/pref_cat_notification_content" />

        <View style="@style/help_cat_post_margin" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_top_line_content" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_top_line_content_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_bottom_line_content" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_bottom_line_content_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_time_remaining_verbosity" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_time_remaining_verbosity_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_vital_signs_content" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_vital_signs_content_summary" />

        <View style="@style/help_cat_pre_margin" />

        <TextView
            style="@style/help_cat"
            android:text="@string/status_bar_icon_settings" />

        <View style="@style/help_cat_post_margin" />

        <TextView
            style="@style/help_text"
            android:text="@string/status_bar_icon_settings_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_icon_content" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_icon_content_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_show_icon_unit" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_show_icon_unit_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_indicate_charging" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_indicate_charging_help" />

        <View style="@style/help_cat_pre_margin" />

        <TextView
            style="@style/help_cat"
            android:text="@string/status_bar_chip_settings" />

        <View style="@style/help_cat_post_margin" />

        <TextView
            style="@style/help_text"
            android:text="@string/status_bar_chip_settings_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_live_update_display" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_live_update_display_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_live_update_keep_main_notification" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_live_update_keep_main_notification_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_chip_content" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_chip_content_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_chip_switching_interval" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_chip_switching_interval_help" />

        <TextView
            style="@style/help_pref"
            android:text="@string/pref_chip_indicate_charging" />

        <TextView
            style="@style/help_text"
            android:text="@string/pref_chip_indicate_charging_help" />
    </LinearLayout>
</ScrollView>
